scrollbar bugfix

--- a/css/board-task-datail-view.css
+++ b/css/board-task-datail-view.css
@@ -1,7 +1,11 @@
+#card-detail-view::-webkit-scrollbar {
+  display: none !important; /* Chrome, Safari, Opera */
+}
+
 #card-detail-view {
   width: 36%;
   height: 90%;
-  overflow: scroll;
+  overflow: auto;
   background-color: rgba(255, 255, 255, 1);
   border-radius: 30px;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
